--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,49 @@
 @tailwind components;
 @tailwind utilities;
 
-.hero-back{
-    background: url(./assets//bg-bottom.png) center bottom no-repeat;
-    background-color: rgba(22, 22, 156, 0.5);
+.nar-bar {
+  @apply m-0
+}
+.hero-back {
+  background: url(./assets//bg-bottom.png) center bottom no-repeat;
+  background-color: rgba(22, 22, 156, 0.5);
+}
+
+@keyframes fadeInUp {
+  from {
+    transform: translate3d(0, 40px, 0);
+  }
+
+  to {
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeInUp {
+  from {
+    transform: translate3d(0, 40px, 0);
+  }
+
+  to {
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+}
+
+.animated {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+}
+
+.animatedFadeInUp {
+  opacity: 0;
+}
+
+.fadeInUp {
+  opacity: 0;
+  animation-name: fadeInUp;
+  -webkit-animation-name: fadeInUp;
 }
