--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,53 @@
 @tailwind components;
 @tailwind utilities;
 
-.nar-bar {
-  @apply m-0
+.p-s {
+  margin: 50px auto;
+  padding: 0px 15px;
 }
+.home {
+  max-width: 1320px;
+  margin: 0px auto;
+}
+
+.container {
+  width: 100%;
+  padding-right: var(--bs-gutter-x, 0.75rem); 
+  padding-left: var(--bs-gutter-x, 0.75rem);
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .container {
+    max-width: 1320px;
+  }
+}
+
 .hero-back {
   background: url(./assets//bg-bottom.png) center bottom no-repeat;
   background-color: rgba(22, 22, 156, 0.5);
