Working on footer

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap");
 
+* {
+  font-family: "Heebo", sans-serif;
+}
 .p-s {
   margin: 100px auto;
   padding: 0px 15px;
@@ -13,7 +17,7 @@
 
 .container {
   width: 100%;
-  padding-right: var(--bs-gutter-x, 0.75rem); 
+  padding-right: var(--bs-gutter-x, 0.75rem);
   padding-left: var(--bs-gutter-x, 0.75rem);
   margin-right: auto;
   margin-left: auto;
