--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
   margin: 0px auto;
 }
 
-.container {
+.container ,.container-footer {
   width: 100%;
   padding-right: var(--bs-gutter-x, 0.75rem);
   padding-left: var(--bs-gutter-x, 0.75rem);
@@ -42,12 +42,20 @@
 }
 
 @media (min-width: 1200px) {
+  .container-footer {
+    max-width: 1080px;
+  }
   .container {
     max-width: 1140px;
   }
+  
+  
 }
 
 @media (min-width: 1400px) {
+  .container-footer {
+    max-width: 1140px;
+  }
   .container {
     max-width: 1320px;
   }
