about responsiveness issue solve

--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,22 @@
   margin-left: auto;
 }
 
+.team-card{
+  display: grid;
+  grid-template-columns:1fr 1fr 1fr 1fr;
+}
+@media (max-width: 476px) {
+
+  .team-card{
+    display: grid;
+    grid-template-columns: 1fr ;
+  }
+}
 @media (min-width: 576px) {
+  .team-card{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
   .container {
     max-width: 540px;
   }
@@ -39,15 +54,24 @@
   .container {
     max-width: 720px;
   }
+  .team-card{
+    display: grid;
+    grid-template-columns: 1fr 1fr ;
+  }
 }
 
 @media (min-width: 992px) {
+ 
   .container {
     max-width: 960px;
   }
 }
 
 @media (min-width: 1200px) {
+  .team-card{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
   .container {
     max-width: 1140px;
   }
