--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,15 @@
 * {
   font-family: "Heebo", sans-serif;
 }
+.portfolio-img {
+  @apply items-center justify-center flex bg-opacity-50 rounded-full hover:bg-white hover:text-black cursor-pointer ease-in-out duration-300 h-10 w-12 bg-primary;
+}
+
+.port-img {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+}
 .p-s {
   margin: 100px auto;
   padding: 0px 15px;
@@ -29,23 +38,29 @@
   margin-left: auto;
 }
 
-.team-card {
+.service-card .team-card,
+.service-card {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 @media (max-width: 476px) {
-  .team-card {
+  .team-card,
+  .service-card {
     display: grid;
     grid-template-columns: 1fr;
   }
 }
 @media (min-width: 576px) {
-  .team-card {
+  .team-card,
+  .service-card {
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
   .container {
     max-width: 540px;
+  }
+  .port-img {
+    grid-template-columns: 1fr;
   }
 }
 
@@ -53,13 +68,25 @@
   .container {
     max-width: 720px;
   }
+  .port-img {
+    grid-template-columns: 1fr 1fr;
+  }
   .team-card {
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
+  .service-card {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
 
 @media (min-width: 992px) {
+  .service-card {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+  .port-img {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
   .container {
     max-width: 960px;
   }
